--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
   <script>
     // Add/edit subjects here: {name, path}
     const subjects = [
-      { name: "Operating Systems", path: "/MCQ/CS23431.json" },
-      { name: "SOFTWARE CONSTRUCTION", path: "/MCQ/CS23432.json" },
+      { name: "Operating Systems", path: "https://raw.githubusercontent.com/Raghavan2005/MCQ-Question-Viewer/004f327a752ae477034a002d8510f520d18eec8d/MCQ/CS23431.json"
+ },
+      { name: "SOFTWARE CONSTRUCTION", path: "https://raw.githubusercontent.com/Raghavan2005/MCQ-Question-Viewer/004f327a752ae477034a002d8510f520d18eec8d/MCQ/CS23432.json" },
       // Add more as needed
     ];
 
