--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
+      background: #181a1b;
+      color: #e0e0e0;
     }
     .container {
       max-width: 900px;
       margin: 20px auto;
       padding: 20px;
-      background: #fff;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      background: #23272a;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
       border-radius: 8px;
     }
     h1 {
       text-align: center;
       font-size: 2rem;
       margin-bottom: 10px;
+      color: #61dafb;
     }
     .tabs {
       display: flex;
       flex-wrap: wrap;
-      border-bottom: 2px solid #e0e0e0;
+      border-bottom: 2px solid #333;
       margin-bottom: 16px;
-      background: #f1f1f1;
+      background: #22272e;
       border-radius: 8px 8px 0 0;
       overflow-x: auto;
     }
@@ -39,43 +41,44 @@
       background: none;
       cursor: pointer;
       font-size: 1rem;
-      color: #007acc;
+      color: #61dafb;
       transition: background 0.2s, color 0.2s;
       margin-right: 2px;
       border-radius: 8px 8px 0 0;
       outline: none;
     }
     .tab-btn.active {
-      background: #fff;
-      color: #222;
-      border-bottom: 2px solid #fff;
+      background: #23272a;
+      color: #fff;
+      border-bottom: 2px solid #23272a;
       font-weight: bold;
     }
     .total-q {
       font-size: 1.1rem;
-      color: #007acc;
+      color: #61dafb;
       margin: 10px 0 18px 0;
       text-align: right;
     }
     .unit-title {
       margin-top: 32px;
       font-size: 1.15rem;
-      color: #007acc;
-      border-bottom: 1px solid #e0e0e0;
+      color: #61dafb;
+      border-bottom: 1px solid #333;
       padding-bottom: 5px;
       font-weight: bold;
     }
     .question {
       margin-bottom: 20px;
       padding: 14px 10px 10px 10px;
-      border-left: 4px solid #007acc;
-      background: #e9f5ff;
+      border-left: 4px solid #61dafb;
+      background: #22272e;
       border-radius: 6px;
     }
     .question p {
       margin: 0 0 10px 0;
       font-weight: 500;
       font-size: 1.07rem;
+      color: #fff;
     }
     .options label {
       display: block;
@@ -85,19 +88,21 @@
       border-radius: 4px;
       font-size: 1rem;
       cursor: pointer;
+      background: #181a1b;
+      color: #e0e0e0;
     }
     .options input[type="radio"] {
       margin-right: 8px;
-      accent-color: #007acc;
+      accent-color: #61dafb;
     }
     .options .correct {
-      background: #d1fadf;
-      color: #207a3c;
+      background: #1b3c24;
+      color: #45c97b;
       font-weight: bold;
       border: 1px solid #45c97b;
     }
     .answer {
-      color: #207a3c;
+      color: #45c97b;
       font-weight: bold;
       margin-top: 8px;
       font-size: 1rem;
@@ -146,18 +151,16 @@
     <div id="mcq-container"></div>
   </div>
   <script>
-    // Add/edit subjects here: {name, path}
+    // Subjects list with JSON URLs
     const subjects = [
-      { name: "Operating Systems", path: "https://raw.githubusercontent.com/Raghavan2005/MCQ-Question-Viewer/004f327a752ae477034a002d8510f520d18eec8d/MCQ/CS23431.json"
- },
-      { name: "SOFTWARE CONSTRUCTION", path: "https://raw.githubusercontent.com/Raghavan2005/MCQ-Question-Viewer/004f327a752ae477034a002d8510f520d18eec8d/MCQ/CS23432.json" },
-      // Add more as needed
+      { name: "Operating Systems", path: "https://raw.githubusercontent.com/Raghavan2005/MCQ-Question-Viewer/004f327a752ae477034a002d8510f520d18eec8d/MCQ/CS23431.json" },
+      { name: "SOFTWARE CONSTRUCTION", path: "https://raw.githubusercontent.com/Raghavan2005/MCQ-Question-Viewer/004f327a752ae477034a002d8510f520d18eec8d/MCQ/CS23432.json" }
     ];
 
     let currentTab = 0;
     let questionCache = {};
 
-    // Create tabs
+    // Render tabs
     function renderTabs() {
       const tabBar = document.getElementById('tab-bar');
       tabBar.innerHTML = '';
@@ -170,7 +173,7 @@
       });
     }
 
-    // Switch subject tab
+    // Switch tab handler
     function switchTab(idx) {
       if (currentTab === idx) return;
       currentTab = idx;
@@ -178,14 +181,14 @@
       loadMCQs(subjects[idx]);
     }
 
-    // Count total questions in a subject's data
+    // Count total questions in data
     function countQuestions(data) {
       let total = 0;
       Object.values(data).forEach(arr => total += arr.length);
       return total;
     }
 
-    // Render MCQs for a subject
+    // Render all MCQs for current subject (no limit)
     function renderMCQs(data) {
       const container = document.getElementById('mcq-container');
       const totalQ = document.getElementById('total-questions');
@@ -235,7 +238,7 @@
       });
     }
 
-    // Load MCQs from JSON file (with cache)
+    // Load MCQ JSON and render (with caching)
     async function loadMCQs(subject) {
       if (questionCache[subject.path]) {
         renderMCQs(questionCache[subject.path]);
@@ -243,16 +246,18 @@
       }
       try {
         const response = await fetch(subject.path);
+        if (!response.ok) throw new Error('Network response was not ok');
         const data = await response.json();
         questionCache[subject.path] = data;
         renderMCQs(data);
       } catch (e) {
         document.getElementById('mcq-container').innerHTML = "<p style='color:red'>Failed to load questions.</p>";
         document.getElementById('total-questions').textContent = '';
+        console.error('Error loading MCQs:', e);
       }
     }
 
-    // Init
+    // Initialize
     renderTabs();
     loadMCQs(subjects[0]);
   </script>
